# consolidador-relatorios

./: .gitattributes  .gitignore  README.md  como_abrir_notebook.txt  demo.ipynb  pyproject.toml
.github/workflows/: ci.yml
dados_exemplo/: _gerar_dados.py  vendas_abril.xlsx  vendas_fevereiro.xlsx  vendas_janeiro.xlsx  vendas_maio.xlsx  vendas_marco.csv
notebooks/: demo.ipynb
src/consolidador/: __init__.py  cli.py  consolidacao.py  leitor.py  limpeza.py  relatorio.py  resumo_pdf.py
tests/: test_consolidacao.py  test_limpeza.py
