[project]
name = "consolidador-relatorios"
version = "0.1.0"
description = "Consolidador Automático de Relatórios — lê planilhas bagunçadas e gera um relatório único e limpo."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "David Alves de Oliveira" }]
license = { text = "MIT" }

dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",   # ler/escrever .xlsx (engine do pandas para Excel)
    "typer>=0.12",     # CLI amigável baseada em type hints
    "rich>=13.7",      # output bonito no terminal (cores, tabelas, barra de progresso)
    "matplotlib>=3.8", # gráficos do Excel e do PDF executivo (saída vetorial)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyterlab>=4.0",  # para abrir/rodar o demo.ipynb
    "ruff>=0.6",        # linter + formatador
]

# Comando de terminal: depois de instalar, o usuário roda `consolidador ...`
[project.scripts]
consolidador = "consolidador.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Layout "src": o pacote vive em src/consolidador
[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatador (https://docs.astral.sh/ruff/)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
# Não checamos o script gerador de dados de exemplo com o mesmo rigor.
extend-exclude = ["dados_exemplo/_gerar_dados.py"]

[tool.ruff.lint]
# E/F = erros e pyflakes; I = ordena imports; B = bugbear; UP = moderniza sintaxe.
select = ["E", "F", "I", "B", "UP"]
